--- a/data/nginx/src/index.html
+++ b/data/nginx/src/index.html
@@ -1,1 +1,1 @@
-bbbbbbbbbbbbbbb
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>jiuyue</title><link href=/static/css/app.7e3850ab6b483fa72136e209a6554f80.css rel=stylesheet></head><body style=margin:0;height:100%><div id=app></div><script type=text/javascript src=/static/js/manifest.2ae2e69a05c33dfc65f8.js></script><script type=text/javascript src=/static/js/vendor.69b291451a361eabc842.js></script><script type=text/javascript src=/static/js/app.b67222f69829c2db2a6f.js></script></body></html>
